// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should be rendered correctly 1`] = `
<label
  className="container uui-checkbox-container root size-18 mode-form uui-color-primary -clickable"
>
  <div
    className="uui-checkbox"
  >
    <input
      aria-checked={false}
      checked={false}
      onChange={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </div>
</label>
`;

exports[`Checkbox should be rendered correctly 2`] = `
<label
  className="container uui-checkbox-container root size-18 mode-cell uui-color-primary -clickable"
>
  <div
    className="uui-checkbox"
  >
    <input
      aria-checked={false}
      checked={false}
      onChange={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </div>
</label>
`;
